--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+
 body{
     margin:0;
-    
+    padding: 0;
     background-image:repeating-conic-gradient(
         from 45deg,
         #111 0deg 90deg,
@@ -122,10 +123,18 @@ top: 10rem;
     height: 474px;
     display: flex;
 }
+.game_area_toe{
+    height: 100%;
+    border-right:1px solid black;
+    width: 75%;
+}
 .game_area{
     height: 100%;
     border-right:1px solid black;
     width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .score_area{
     height: 100%;
@@ -141,9 +150,12 @@ top: 10rem;
     width:75px;
     height:75px;
     border: 1px solid ;
-    
+
 }
-.your_score_area,.computer_score_area{
+.your_score_area,.computer_score_area,.high_score{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 18px;
     font-family:'Cambria', 'Cochin', Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
@@ -200,4 +212,22 @@ top: 10rem;
     align-items: center;
 }
 
-
+/***********snake game**********/
+.board{
+    background-color: gray;
+    width: 82vmin;
+    height: 70vmin;
+    border: 2px solid black;
+    display: grid;
+    grid-template-rows: repeat(18,1fr);
+    grid-template-columns: repeat(18,1fr);
+}
+.head{
+    background-color: red;
+}
+.food{
+    background-color: purple;
+}
+.snake{
+    background-color: yellow;
+}
